WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77900
zvmul incorrectly multiplies complex arrays on Windows.
https://bugs.webkit.org/show_bug.cgi?id=77900
Summary
zvmul incorrectly multiplies complex arrays on Windows.
Raymond Toy
Reported
2012-02-06 14:27:06 PST
WebCore::VectorMath::zvmul incorrectly multiplies complex vectors on Windows, breaking convolution demos.
Attachments
Patch
(2.64 KB, patch)
2012-02-06 14:44 PST
,
Raymond Toy
kbr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Raymond Toy
Comment 1
2012-02-06 14:44:11 PST
Created
attachment 125709
[details]
Patch
Chris Rogers
Comment 2
2012-02-06 14:47:31 PST
Looks good.
Raymond Toy
Comment 3
2012-02-06 14:48:13 PST
Actually, this also affects Linux, if the arrays are not aligned for the SSE2 code to be used. As a side effect, this fixes the test failure on Windows for the convolution-mono-mono test (but 75933). (Unfortunate that the convolution test was done after
bug 74842
was landed.)
Kenneth Russell
Comment 4
2012-02-06 14:48:21 PST
Comment on
attachment 125709
[details]
Patch rs=me
Chris Rogers
Comment 5
2012-02-06 15:23:54 PST
Committed
r106864
: <
http://trac.webkit.org/changeset/106864
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug